[project]
name = "synthesis_metamask_delegations"
version = "0.1.0"
description = "A delegation mesh that models root authority, sub-delegations, expiry windows, and intent namespaces for safe multi-agent coordination."
readme = "README.md"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
